# smart-store-project

./: .gitignore  .python-version  Dockerfile  deploy-docker.py  deploy-run-secrets.py  pyproject.toml  requirements.txt  secrets.json
.cert/: VGynnZMYAZMtq-aKTLDPi7kR-O6o8eNa4w_PHFJPLJc  juvtQWAKibOgwX7IE5TpVwYpR8vEzhvymBSKxJO2Mzo
.config/local_dev/: gunicorn.py  smart-store-project.nginx  supervisord.conf
app/: API Document.ipynb  Untitled.ipynb  db.sqlite3
app/.ipynb_checkpoints/: API Document-checkpoint.ipynb
app/config/: global_variables.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  production.py
app/media/: complete_result_data.csv  complete_result_pandas_data.csv  초파리싹_result_data.csv  초파리퇴치법_result_data.csv  쿠팡related_result_data.csv
app/members/: admin.py  exceptions.py  models.py  text.py  urls.py  views.py
app/members/migrations/: 0001_initial.py
app/members/serializers/: user.py
app/search/: apis.py  urls.py  views.py
